# DotNetInjector

.github/plans/: plan1.md
DotNetInjector/: .gitignore  BLOG.md  Directory.Build.props  DotNetInjector.sln  readme.md
DotNetInjector/demo/CoreInjectionClassLibrary/: InjectionClass.cs
DotNetInjector/demo/CoreInjectionDemo/: Program.cs
DotNetInjector/demo/InjectionClassLibrary/: Class1.cs  InjectionClass.cs  InjectionClassLibrary.csproj
DotNetInjector/demo/InjectionDemo/: InjectionDemo.csproj  Program.cs
DotNetInjector/demo/InjectionValidationRunner/: InjectionValidationRunner.csproj  Program.cs
DotNetInjector/demo/SharedMemory/: SharedMemory.cpp  SharedMemory.vcxproj  SharedMemory.vcxproj.filters
DotNetInjector/docs/: architecture.md
DotNetInjector/src/DotNetInjector/: App.xaml  App.xaml.cs  AssemblyInfo.cs  DotNetInjector.csproj  DotNetInjectorModule.cs  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
DotNetInjector/src/SharedMemoryLib/: SharedMemoryLib.vcxproj  dllmain.cpp
DotNetInjector/tests/DotNetInjector.SmokeTests/: AssertEx.cs  DotNetInjector.SmokeTests.csproj  InjectionSmokeTests.cs  Program.cs  UiSmokeTests.cs
DotNetInjector/tests/DotNetInjector.Tests/: AssertEx.cs  DotNetInjector.Tests.csproj  Program.cs  (+3 more)
injected_libraries/: InjectedLibraries.sln
injection_libraries/: InjectionLibraries.sln  reademe.md
injector/: .gitignore  CMakeLists.txt  CMakePresets.json
injector/include/: cxxopts.hpp  defines.hpp  injector.h  injector.hpp  process_helper.hpp  string_convertor.hpp
injector/src/: injector.cpp  main.cpp  process_helper.cpp
(+70 files in other folders)
